# rustcompufest2026

./: README.md  fundamentos_programacion_sistemas_con_Rust.md  palabras_reservadas.md  use_statements.md
parte1/: 01_buffer.rs  02_buffer_fijo.rs  03_logging_str.rs  04_enum_estado.rs  05_option_resultado.rs  06_buffer_archivo.rs  07_uso_path.rs  08_uso_match.rs  09_integrado.rs  09_integrado_sin_unwrap.rs  README.md
parte2/: 01_cat.rs  02_echo.rs  03_head.rs  04_tail.rs  05_cut.rs  06_od.rs  07_wc.rs  README.md
parte3/: 01_proceso.rs  02_proceso_con_pipe.rs  03_thread.rs  04_move.rs  05_move_multihilos.rs  README.md  closures.md
parte4/: 01_simple_pipeline.rs  02_tres_pipeline.rs  03_pipeline_threads.rs  04_signals.rs  05_signals_hilos.rs  Cargo.toml  README.md  archivo.txt  cargo.md  mpsc.md
parte5/: 01_mutex.rs  02_rw_lock.rs  03_condvar.rs  04_channels.rs  README.md  arc.md  ipc_unix.md
parte6/: 01_productor_consumidor.rs  02_lectores_escritores.rs  03_filosofos_comensales.rs  04_barberia.rs  README.md
parte7/: 01_cliente.rs  02_servidor.rs  03_servidor_multihilo.rs  04_net_echo.rs  README.md
parte8/: README.md  p1_01_buffer_funcional.rs  p1_02_wc_funcional.rs  p1_03_head_funcional.rs  p1_04_log_funcional.rs  p1_05_pipeline_funcional.rs  p2_01_cat_funcional.rs  p2_02_echo_funcional.rs  p2_04_tail_funcional.rs  p2_05_cut_funcional.rs  p2_06_od_funcional.rs  p3_01_proceso_funcional.rs  p3_05_multihilos_funcional.rs  p4_01_pipeline_funcional.rs  p4_03_pipeline_threads_funcional.rs  p5_01_mutex_funcional.rs  p5_04_channels_funcional.rs  (+5 more)
(+3 files in other folders)
